<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Appostle</string>
    <string name="menu_settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="about_license">Appostle is Open Source under the Apache License, Version 2.0\nVisit http://code.google.com/p/appostle\n\nPowered by ActionBarSherlock</string>
    <string name="about_me">&lt;h3>Appostle&lt;h3>©2013 Jeffrey Rusterholz</string>
    <string name="view_in_play_store">View in Play Store</string>
    <string name="choose_language">Choose language</string>
    <string name="view_in_browser">View in Browser</string>
    <string name="loading_progress">Loading…</string>
    <string name="open_app_info">Open App Info</string>
    <string name="certificate_info" formatted="false">Certificate for: %s\n\nIssued by: %s\n\nValid from %s to %s\n\nSerial No: %s\n\nGenerated with %s.</string>
    <string name="certificate_error" formatted="false">Error retrieving certificate info.\nMessage: </string><string name="certificate_error" formatted="false">Error retrieving certificate info.\nMessage: </string>
    <string name="certificate_previous_serialno">(Previous SN: %s)</string>
    <string name="certificate_title">Certificate Info</string>
    <string name="appbrain">AppBrain</string>
</resources>