<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="4dp"
	        android:background="@drawable/shadow_left" >
	
	        <ImageView
	            android:id="@+id/detail_image"
	            android:layout_width="96dp"
	            android:layout_height="96dp"
	            android:layout_marginRight="8dp"
	            android:padding="4dp"
	            android:src="@drawable/ic_launcher" />
	
	        <TextView
	            android:id="@+id/detail_app_name"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:lineSpacingExtra="8dp"
	            android:lineSpacingMultiplier="0.4"
	            android:text="" />

	    </LinearLayout>

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <Button
	            android:id="@+id/ViewInPlayStoreButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/view_in_play_store" />

	        <Button
	            android:id="@+id/appBrain"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/CertificateInfo"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentTop="true"
	            android:text="@string/appbrain" />

	        <View
	            android:id="@+id/separator"
	            android:layout_width="fill_parent"
	            android:layout_height="1dip"
	            android:layout_below="@id/appBrain"
	            android:layout_marginBottom="4dp"
	            android:layout_marginTop="4dp"
	            android:background="#000" />

	        <Spinner
	            android:id="@+id/languagesSpinner"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignBottom="@+id/ViewInBrowser"
	            android:layout_alignRight="@+id/ViewInPlayStoreButton"
	            android:layout_below="@id/separator"
	            android:entries="@array/languages"
	            android:prompt="@string/choose_language" />

	        <Button
	            android:id="@+id/ViewInBrowser"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_below="@id/separator"
	            android:text="@string/view_in_browser" />

	        <View
	            android:id="@+id/separator2"
	            android:layout_width="fill_parent"
	            android:layout_height="1dip"
	            android:layout_below="@id/ViewInBrowser"
	            android:layout_marginBottom="4dp"
	            android:layout_marginTop="4dp"
	            android:background="#000" />

	        <Button
	            android:id="@+id/OpenAppInfo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/separator2"
	            android:text="@string/open_app_info" />

	        <Button
	            android:id="@+id/CertificateInfo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:layout_alignParentRight="true"
	            android:layout_below="@id/separator2"
	            android:text="@string/certificate_title" />

	    </RelativeLayout>
	    
	</LinearLayout>
</ScrollView>
	